<resources>
    <string name="app_name">MyApoteker</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No internet connection</string>
    <string name="fetch_failed">Failed Fetching API</string>
    <string name="some_error">Some Error</string>
    <string name="remote_data">Remote Data</string>
    <string name="shared_preference_data">SharedPreference Data</string>
    <string name="local_data">Locale Data</string>
    <string name="empty_data">No data available!</string>
    <string name="show_data">Success show result data -> %1$s</string>
    <string name="movie_desc">%1$d - %2$s\n</string>
    <string name="todo">TODO</string>
    <string name="no_data_showing">No data showing…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_pass">Lupa Password? Butuh bantuan.</string>
    <string name="register">Register User</string>
    <string name="no_account_register">Belum punya akun ? Daftar sekarang.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient">Pasien</string>
    <string name="pharmacist">Apoteker</string>
    <string name="pharmacy">Apotek</string>
    <string name="user_type">Pilih Jenis Pengguna :</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="browse_file">Pilih File</string>
    <string name="no_file">Belum ada file…</string>
    <string name="stra_upload">STRA (upload dokumen)</string>
    <string name="sipa_upload">SIPA (upload dokumen)</string>
</resources>