<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLow"
    android:fillViewport="true"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/space_90"
            android:layout_height="@dimen/space_90"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_pharmacist_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_24"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:backgroundTint="@color/colorDivider"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/size_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTIL"
            app:passwordToggleContentDescription="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:backgroundTint="@color/colorDivider"
                android:inputType="textPassword"
                android:textSize="@dimen/size_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInMB"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_60"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/emailTIL"
            app:layout_constraintStart_toStartOf="@+id/emailTIL"
            app:layout_constraintTop_toBottomOf="@+id/passwordTIL"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="@color/colorWhite" />

        <TextView
            android:id="@+id/forgotPassTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_0"
            android:paddingTop="@dimen/space_8"
            android:paddingEnd="@dimen/space_0"
            android:paddingBottom="@dimen/space_8"
            android:text="@string/forgot_pass"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@+id/signInMB"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signInMB"
            app:layout_constraintTop_toBottomOf="@+id/signInMB" />

        <TextView
            android:id="@+id/hintRegisterTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="@dimen/space_0"
            android:paddingTop="@dimen/space_8"
            android:paddingEnd="@dimen/space_0"
            android:paddingBottom="@dimen/space_8"
            android:text="@string/no_account_register"
            android:textAlignment="textStart"
            android:textSize="@dimen/size_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/signInMB"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signInMB"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>